prepare to remove reflection

--- a/belotebean/resources_cards/classes/en/cards/belote/results.html
+++ b/belotebean/resources_cards/classes/en/cards/belote/results.html
@@ -20,7 +20,7 @@
 					Noone
 				</c:if> <c:if condition="!calledPlayersList.isEmpty()">
 					<ul>
-						<c:for var="p" list="calledPlayersList">
+						<c:for var="p" list="calledPlayersList" className='java.lang.String'>
 							<li>{p;}</li>
 						</c:for>
 					</ul>
@@ -94,7 +94,7 @@
 		<thead>
 			<tr>
 				<td></td>
-				<c:for var="p" list="getNicknames()">
+				<c:for var="p" list="getNicknames()" className='java.lang.String'>
 					<td>{p;}</td>
 				</c:for>
 			</tr>
@@ -103,7 +103,7 @@
 			<c:for var="l" list="linesDeal" className='cards.belote.beans.LineDeal'>
 				<tr>
 					<td>{l;number}</td>
-					<c:for var="s" list="l;scores">
+					<c:for var="s" list="l;scores" className='java.lang.Long'>
 						<td>{s;}</td>
 					</c:for>
 				</tr>
