--- a/pokemonbean/resources_pk/rom/web/html/endround/singlerelation.html
+++ b/pokemonbean/resources_pk/rom/web/html/endround/singlerelation.html
@@ -21,7 +21,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<c:for key="s" map="rateDamageFunctionOfNbRounds" value="r">
+					<c:for key="s" map="rateDamageFunctionOfNbRounds" value="r" keyClassName='java.lang.Long' varClassName='r'>
 						<tr>
 							<td>{s;}</td>
 							<td>{r;}</td>
@@ -39,7 +39,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<c:for key="s" map="lawForEnablingEffect" value="r">
+					<c:for key="s" map="lawForEnablingEffect" value="r" keyClassName='li' varClassName='r'>
 						<tr>
 							<td>{s;}</td>
 							<td>{r;}</td>
