--- a/pokemonbean/resources_pk/rom/web/html/items/ball.html
+++ b/pokemonbean/resources_pk/rom/web/html/items/ball.html
@@ -16,7 +16,7 @@
 			{catchingRate}
 			<c:if condition="!mapVars.isEmpty()">
 				<ul>
-					<c:for key="k" map="mapVars" value="v">
+					<c:for key="k" map="mapVars" value="v" keyClassName="java.lang.String" varClassName="java.lang.String">
 						<li>{k;} :
 							<c:message quoted="" value="msg_ball,formula">
 								<param value="v;"/>
