--- a/pokemonbean/resources_pk/rom/web/html/items/berry.html
+++ b/pokemonbean/resources_pk/rom/web/html/items/berry.html
@@ -127,7 +127,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="damageRateRecoilFoe" value="b">
+						<c:for key="s" map="damageRateRecoilFoe" value="b" varClassName="r">
 							<tr>
 								<td>{getTrCategRecoil(s;;)}</td>
 								<td>{b;}</td>
@@ -150,7 +150,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="boostStatis" value="b">
+						<c:for key="s" map="boostStatis" value="b" varClassName="java.lang.Byte">
 							<tr>
 								<td>{getTrBoostStat(s;;)}</td>
 								<td>{b;}</td>
