--- a/pokemonbean/resources_pk/rom/web/html/items/healingitem.html
+++ b/pokemonbean/resources_pk/rom/web/html/items/healingitem.html
@@ -25,7 +25,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="b" map="happiness" value="w">
+						<c:for key="b" map="happiness" value="w" varClassName="java.lang.Short">
 							<tr>
 								<c:if condition="!isBall(b;;)">
 									<td><c:message value="msg_healingitem,happiness_other_ball"/></td>
