--- a/pokemonbean/resources_pk/rom/web/html/langs/langs.html
+++ b/pokemonbean/resources_pk/rom/web/html/langs/langs.html
@@ -19,7 +19,7 @@
 			<tbody>
 				<c:for list="getKeysGenders()" var="k">
 					<tr>
-						<c:for list="getRowGender(k;;)" var="s">
+						<c:for list="getRowGender(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -40,7 +40,7 @@
 			<tbody>
 				<c:for list="getKeysBooleans()" var="k">
 					<tr>
-						<c:for list="getRowBoolean(k;;)" var="s">
+						<c:for list="getRowBoolean(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -61,7 +61,7 @@
 			<tbody>
 				<c:for list="getKeysEnvironments()" var="k">
 					<tr>
-						<c:for list="getRowEnvironment(k;;)" var="s">
+						<c:for list="getRowEnvironment(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -82,7 +82,7 @@
 			<tbody>
 				<c:for list="getKeysStatistics()" var="k">
 					<tr>
-						<c:for list="getRowStatistic(k;;)" var="s">
+						<c:for list="getRowStatistic(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -103,7 +103,7 @@
 			<tbody>
 				<c:for list="getKeysTargets()" var="k">
 					<tr>
-						<c:for list="getRowTarget(k;;)" var="s">
+						<c:for list="getRowTarget(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -124,7 +124,7 @@
 			<tbody>
 				<c:for list="getKeysCategories()" var="k">
 					<tr>
-						<c:for list="getRowCategory(k;;)" var="s">
+						<c:for list="getRowCategory(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -145,7 +145,7 @@
 			<tbody>
 				<c:for list="getKeysTypes()" var="k">
 					<tr>
-						<c:for list="getRowType(k;;)" var="s">
+						<c:for list="getRowType(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -166,7 +166,7 @@
 			<tbody>
 				<c:for list="getKeysPokemon()" var="k">
 					<tr>
-						<c:for list="getRowPokemon(k;;)" var="s">
+						<c:for list="getRowPokemon(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -187,7 +187,7 @@
 			<tbody>
 				<c:for list="getKeysMoves()" var="k">
 					<tr>
-						<c:for list="getRowMove(k;;)" var="s">
+						<c:for list="getRowMove(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -208,7 +208,7 @@
 			<tbody>
 				<c:for list="getKeysItems()" var="k">
 					<tr>
-						<c:for list="getRowItem(k;;)" var="s">
+						<c:for list="getRowItem(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -229,7 +229,7 @@
 			<tbody>
 				<c:for list="getKeysAbilities()" var="k">
 					<tr>
-						<c:for list="getRowAbility(k;;)" var="s">
+						<c:for list="getRowAbility(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -250,7 +250,7 @@
 			<tbody>
 				<c:for list="getKeysStatus()" var="k">
 					<tr>
-						<c:for list="getRowStatus(k;;)" var="s">
+						<c:for list="getRowStatus(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -271,7 +271,7 @@
 			<tbody>
 				<c:for list="getKeysMath()" var="k">
 					<tr>
-						<c:for list="getRowMath(k;;)" var="s">
+						<c:for list="getRowMath(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
@@ -292,7 +292,7 @@
 			<tbody>
 				<c:for list="getKeysDesc()" var="k">
 					<tr>
-						<c:for list="getRowDesc(k;;)" var="s">
+						<c:for list="getRowDesc(k;;)" var="s" className='java.lang.String'>
 							<td>
 								{s;}
 							</td>
