--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effstatis.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effstatis.html
@@ -45,7 +45,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<c:for key="c" map="statisVarRank" value="r">
+							<c:for key="c" map="statisVarRank" value="r" keyClassName='java.lang.String' varClassName='java.lang.Byte'>
 								<tr>
 									<td>{c;}</td>
 									<td>{r;}</td>
@@ -73,7 +73,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<c:for key="c" map="statisVarRank" value="r">
+							<c:for key="c" map="statisVarRank" value="r" keyClassName='java.lang.String' varClassName='java.lang.Byte'>
 								<tr>
 									<td>{c;}</td>
 									<td>{r;}</td>
@@ -86,7 +86,7 @@
 				<br/>
 				<c:if condition="!mapVarsStatistics.isEmpty()">
 					<ul>
-						<c:for key="k" map="mapVarsStatistics" value="v">
+						<c:for key="k" map="mapVarsStatistics" value="v" keyClassName='java.lang.String' varClassName='java.lang.String'>
 							<li>{k;} :
 								<c:message quoted="" value="msg_effstatis,formula">
 									<param value="v;"/>
@@ -110,7 +110,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for list="swapBoostStatis" var="c">
+						<c:for list="swapBoostStatis" var="c" className='java.lang.String'>
 							<tr>
 								<td>{c;}</td>
 								<td>{getSwapFail(c;;)}</td>
@@ -121,7 +121,7 @@
 				<br/>
 				<c:if condition="!mapVarsStatistics.isEmpty()">
 					<ul>
-						<c:for key="k" map="mapVarsStatistics" value="v">
+						<c:for key="k" map="mapVarsStatistics" value="v" keyClassName='java.lang.String' varClassName='java.lang.String'>
 							<li>{k;} :
 								<c:message quoted="" value="msg_effstatis,formula">
 									<param value="v;"/>
@@ -136,7 +136,7 @@
 					<param value="defaultBoost"/>
 				</c:message>
 				<ul>
-					<c:for list="cancelLowStat" var="s">
+					<c:for list="cancelLowStat" var="s" className='java.lang.String'>
 						<li>{s;}</li>
 					</c:for>
 				</ul>
@@ -147,7 +147,7 @@
 					<param value="defaultBoost"/>
 				</c:message>
 				<ul>
-					<c:for list="cancelChgtStat" var="s">
+					<c:for list="cancelChgtStat" var="s" className='java.lang.String'>
 						<li>{s;}</li>
 					</c:for>
 				</ul>
@@ -158,7 +158,7 @@
 					<param value="defaultBoost"/>
 				</c:message>
 				<ul>
-					<c:for list="copyBoost" var="s">
+					<c:for list="copyBoost" var="s" className='java.lang.String'>
 						<li>{s;}</li>
 					</c:for>
 				</ul>
