--- a/pokemonbean/resources_pk/rom/web/html/moves/moveline.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/moveline.html
@@ -7,7 +7,7 @@
 			<td><a c:command="$clickMove({index})" href="">{displayName}</a></td>
 			<td>{pp}</td>
 			<td>
-				<c:for list="types" var="t">
+				<c:for list="types" var="t" className='java.lang.String'>
 					{t;} -
 				</c:for>
 			</td>
