--- a/pokemonbean/resources_pk/rom/web/html/sending/effsending.html
+++ b/pokemonbean/resources_pk/rom/web/html/sending/effsending.html
@@ -33,13 +33,13 @@
 					<p>
 						<c:message value="msg_eff,reasons"/>
 						<ul>
-							<c:for list="reasons" var="r">
+							<c:for list="reasons" var="r" className='java.lang.String'>
 								<li>{r;}</li>
 							</c:for>
 						</ul>
 						<br/>
 						<ul>
-							<c:for key="c" map="mapVarsFail" value="r">
+							<c:for key="c" map="mapVarsFail" value="r" keyClassName='java.lang.String' varClassName='java.lang.String'>
 								<li>{c;} :
 									<c:message quoted="" value="msg_eff,formula">
 										<param value="r;"/>
@@ -81,7 +81,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								<c:for key="c" map="statisVarRank" value="r">
+								<c:for key="c" map="statisVarRank" value="r" keyClassName='java.lang.String' varClassName='java.lang.Byte'>
 									<tr>
 										<td>{c;}</td>
 										<td>{r;}</td>
@@ -109,7 +109,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								<c:for key="c" map="statisVarRank" value="r">
+								<c:for key="c" map="statisVarRank" value="r" keyClassName='java.lang.String' varClassName='java.lang.Byte'>
 									<tr>
 										<td>{c;}</td>
 										<td>{r;}</td>
@@ -122,7 +122,7 @@
 					<br/>
 					<c:if condition="!mapVarsStatistics.isEmpty()">
 						<ul>
-							<c:for key="k" map="mapVarsStatistics" value="v">
+							<c:for key="k" map="mapVarsStatistics" value="v" keyClassName='java.lang.String' varClassName='java.lang.String'>
 								<li>{k;} :
 									<c:message quoted="" value="msg_effstatis,formula">
 										<param value="v;"/>
@@ -146,7 +146,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<c:for list="swapBoostStatis" var="c">
+							<c:for list="swapBoostStatis" var="c" className='java.lang.String'>
 								<tr>
 									<td>{c;}</td>
 									<td>{getSwapFail(c;;)}</td>
@@ -157,7 +157,7 @@
 					<br/>
 					<c:if condition="!mapVarsStatistics.isEmpty()">
 						<ul>
-							<c:for key="k" map="mapVarsStatistics" value="v">
+							<c:for key="k" map="mapVarsStatistics" value="v" keyClassName='java.lang.String' varClassName='java.lang.String'>
 								<li>{k;} :
 									<c:message quoted="" value="msg_effstatis,formula">
 										<param value="v;"/>
@@ -172,7 +172,7 @@
 						<param value="defaultBoost"/>
 					</c:message>
 					<ul>
-						<c:for list="cancelLowStat" var="s">
+						<c:for list="cancelLowStat" var="s" className='java.lang.String'>
 							<li>{s;}</li>
 						</c:for>
 					</ul>
@@ -183,7 +183,7 @@
 						<param value="defaultBoost"/>
 					</c:message>
 					<ul>
-						<c:for list="cancelChgtStat" var="s">
+						<c:for list="cancelChgtStat" var="s" className='java.lang.String'>
 							<li>{s;}</li>
 						</c:for>
 					</ul>
@@ -194,7 +194,7 @@
 						<param value="defaultBoost"/>
 					</c:message>
 					<ul>
-						<c:for list="copyBoost" var="s">
+						<c:for list="copyBoost" var="s" className='java.lang.String'>
 							<li>{s;}</li>
 						</c:for>
 					</ul>
