--- a/pokemonbean/resources_pk/rom/web/html/status/data.html
+++ b/pokemonbean/resources_pk/rom/web/html/status/data.html
@@ -18,13 +18,13 @@
 				<c:if condition="!reasonsEndRound.isEmpty()">
 					<c:message value="msg_effendround,reasons"/>
 					<ul>
-						<c:for list="reasonsEndRound" var="r">
+						<c:for list="reasonsEndRound" var="r" className='java.lang.String'>
 							<li>{r;}</li>
 						</c:for>
 					</ul>
 					<br/>
 					<ul>
-						<c:for key="c" map="mapVarsFailEndRound" value="r">
+						<c:for key="c" map="mapVarsFailEndRound" value="r" keyClassName='java.lang.String' varClassName='java.lang.String'>
 							<li>{c;} : 
 								<c:message quoted="" value="msg_status,formula">
 									<param value="r;"/>
@@ -78,7 +78,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="multStat" value="r">
+						<c:for key="s" map="multStat" value="r" varClassName='r'>
 							<tr>
 								<td>{getTrMultStat(s;;)}</td>
 								<td>{r;}</td>
@@ -91,13 +91,13 @@
 			<c:if condition="!reasons.isEmpty()">
 				<c:message value="msg_status,reasons"/>
 				<ul>
-					<c:for list="reasons" var="r">
+					<c:for list="reasons" var="r" className='java.lang.String'>
 						<li>{r;}</li>
 					</c:for>
 				</ul>
 				<br/>
 				<ul>
-					<c:for key="c" map="mapVarsFail" value="r">
+					<c:for key="c" map="mapVarsFail" value="r"keyClassName='java.lang.String' varClassName='java.lang.String'>
 						<li>{c;} : 
 							<c:message quoted="" value="msg_status,formula">
 								<param value="r;"/>
@@ -138,7 +138,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="lawForUsingAMoveNbRound" value="r">
+						<c:for key="s" map="lawForUsingAMoveNbRound" value="r" keyClassName='li' varClassName='r'>
 							<tr>
 								<td>{s;}</td>
 								<td>{r;}</td>
