--- a/pokemonbean/resources_pk/rom/web_fight/html/team.html
+++ b/pokemonbean/resources_pk/rom/web_fight/html/team.html
@@ -28,7 +28,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="m" map="enabledMoves" value="a" varClassName="aiki.game.fight.ActivityOfMove">
+				<c:for key="m" map="enabledMoves" value="a" keyClassName='java.lang.String' varClassName="aiki.game.fight.ActivityOfMove">
 					<tr>
 						<td>{m;}</td>
 						<c:if condition="a;isEnabled()">
@@ -85,7 +85,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="m" map="enabledMovesWhileSendingFoeUses" value="u">
+				<c:for key="m" map="enabledMovesWhileSendingFoeUses" value="u" keyClassName='java.lang.String' varClassName='li'>
 					<tr>
 						<td>{m;}</td>
 						<td>{u;}</td>
@@ -102,7 +102,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="m" map="nbUsesMoves" value="u">
+				<c:for key="m" map="nbUsesMoves" value="u" keyClassName='java.lang.String' varClassName='java.lang.Integer'>
 					<tr>
 						<td>{m;}</td>
 						<td>{u;}</td>
@@ -122,8 +122,8 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="m" map="healAfter" value="u" varClassName="ntm">
-					<c:for key="p" map="u;" value="s" varClassName="aiki.game.fight.StacksOfUses">
+				<c:for key="m" map="healAfter" value="u" keyClassName='java.lang.String' varClassName="ntm">
+					<c:for key="p" map="u;" value="s" keyClassName='java.lang.Byte' varClassName="aiki.game.fight.StacksOfUses">
 						<tr>
 							<td>{m;}</td>
 							<td>{p;}</td>
@@ -158,8 +158,8 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="m" map="movesAnticipation" value="u" varClassName="ntm">
-					<c:for key="p" map="u;" value="s" varClassName="aiki.game.fight.Anticipation">
+				<c:for key="m" map="movesAnticipation" value="u" keyClassName='java.lang.String' varClassName="ntm">
+					<c:for key="p" map="u;" value="s" keyClassName='java.lang.Byte' varClassName="aiki.game.fight.Anticipation">
 						<tr>
 							<td>{m;}</td>
 							<td>{p;}</td>
