--- a/pokemonbean/resources_pk/rom/web_game/html/difficulty.html
+++ b/pokemonbean/resources_pk/rom/web_game/html/difficulty.html
@@ -45,7 +45,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<c:for key="e" map="damageRatePlayerTable" value="r">
+					<c:for key="e" map="damageRatePlayerTable" value="r" keyClassName='r' varClassName='r'>
 						<tr>
 							<td>{e;}</td>
 							<td>{r;}</td>
@@ -63,7 +63,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<c:for key="e" map="damageRateFoeTable" value="r">
+					<c:for key="e" map="damageRateFoeTable" value="r" keyClassName='r' varClassName='r'>
 						<tr>
 							<td>{e;}</td>
 							<td>{r;}</td>
