--- a/pokemonbean/resources_pk/rom/web_prog/html/gameprogall.html
+++ b/pokemonbean/resources_pk/rom/web_prog/html/gameprogall.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<a c:command="web_prog/html/gameprog.html"><c:message value="msg_prog,returnMain"/></a><br/>
-		<c:for key="k" map="fullFamiliesBase" value="m" varClassName="ls">
+		<c:for key="k" map="fullFamiliesBase" value="m" keyClassName='java.lang.String' varClassName="ls">
 			{k;}<br/>
 			<table>
 				<tbody>
