--- a/tarotbean/resources_cards/classes/fr/cards/tarot/detailsresults.html
+++ b/tarotbean/resources_cards/classes/fr/cards/tarot/detailsresults.html
@@ -18,10 +18,10 @@
 			<c:for var="l" list="linesDeclaring" className='cards.tarot.beans.SumDeclaringPlayer'>
 				<li>annonces de {l;nickname} ({l;status}): <br/>
 					<ul>
-						<c:for key="h" value="p" map="l;handfuls">
+						<c:for key="h" value="p" map="l;handfuls" keyClassName='$Handfuls' varClassName='java.lang.Short'>
 							<li>{h;} : {p;}</li>
 						</c:for>
-						<c:for key="m" value="p" map="l;miseres">
+						<c:for key="m" value="p" map="l;miseres" keyClassName='$Miseres' varClassName='java.lang.Short'>
 							<li>{m;} : {p;}</li>
 						</c:for>
 						<li>Somme : {l;sum}</li>
@@ -114,10 +114,10 @@
 			<c:for var="l" list="linesDeclaring" className='cards.tarot.beans.SumDeclaringPlayer'>
 				<li>annonce de {l;nickname}: <br/>
 					<ul>
-						<c:for key="h" value="p" map="l;handfuls">
+						<c:for key="h" value="p" map="l;handfuls" keyClassName='$Handfuls' varClassName='java.lang.Short'>
 							<li>{h;}</li>
 						</c:for>
-						<c:for key="m" value="p" map="l;miseres">
+						<c:for key="m" value="p" map="l;miseres" keyClassName='$Miseres' varClassName='java.lang.Short'>
 							<li>{m;}</li>
 						</c:for>
 					</ul>
