--- a/pokemonbean/resources_pk/rom/web/html/simulation/editpokemontrainer.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/editpokemontrainer.html
@@ -38,7 +38,7 @@
 							<td>{d;displayName}</td>
 							<td>{d;pp}</td>
 							<td>
-								<c:for list="d;getTypes()" var="t">
+								<c:for list="d;getTypes()" var="t" className='java.lang.String'>
 									{t;} -
 								</c:for>
 							</td>
