--- a/pokemonbean/resources_pk/rom/web/html/simulation/selectpokemon.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/selectpokemon.html
@@ -37,7 +37,7 @@
 						<td><c:img src="{getMiniImage(d;;)}"/></td>
 						<td><a c:command="$clickLink({d;;})" href="">{d;displayName}</a></td>
 						<td>
-							<c:for list="d;types" var="t">
+							<c:for list="d;types" var="t" className='java.lang.String'>
 								{t;} -
 							</c:for>
 						</td>
