--- a/pokemonbean/resources_pk/rom/web/html/simulation/simulation.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/simulation.html
@@ -53,7 +53,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="e" map="damageRatePlayerTable" value="r">
+						<c:for key="e" map="damageRatePlayerTable" value="r" keyClassName='r' varClassName='r'>
 							<tr>
 								<td>{e;}</td>
 								<td>{r;}</td>
@@ -71,7 +71,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="e" map="damageRateFoeTable" value="r">
+						<c:for key="e" map="damageRateFoeTable" value="r" keyClassName='r' varClassName='r'>
 							<tr>
 								<td>{e;}</td>
 								<td>{r;}</td>
@@ -119,7 +119,7 @@
 										<td>{getGenderFoe(p;;)}</td>
 										<td>{getItemFoe(p;;)}</td>
 										<td>
-											<c:for list="getMovesFoe(p;;)" var="m">
+											<c:for list="getMovesFoe(p;;)" var="m" className='java.lang.String'>
 												{m;} - 
 											</c:for>
 										</td>
@@ -165,7 +165,7 @@
 										<td>{getGenderAlly(p;;)}</td>
 										<td>{getItemAlly(p;;)}</td>
 										<td>
-											<c:for list="getMovesAlly(p;;)" var="m">
+											<c:for list="getMovesAlly(p;;)" var="m" className='java.lang.String'>
 												{m;} - 
 											</c:for>
 										</td>
@@ -262,7 +262,7 @@
 									<td>{getGender(p;;)}</td>
 									<td>{getItem(p;;)}</td>
 									<td>
-										<c:for list="getMoves(p;;)" var="m">
+										<c:for list="getMoves(p;;)" var="m" className='java.lang.String'>
 											{m;} - 
 										</c:for>
 									</td>
@@ -319,7 +319,7 @@
 							<td>{getGenderFoe(p;;)}</td>
 							<td>{getItemFoe(p;;)}</td>
 							<td>
-								<c:for list="getMovesFoe(p;;)" var="m">
+								<c:for list="getMovesFoe(p;;)" var="m" className='java.lang.String'>
 									{m;} - 
 								</c:for>
 							</td>
@@ -350,7 +350,7 @@
 							<td>{getGenderAlly(p;;)}</td>
 							<td>{getItemAlly(p;;)}</td>
 							<td>
-								<c:for list="getMovesAlly(p;;)" var="m">
+								<c:for list="getMovesAlly(p;;)" var="m" className='java.lang.String'>
 									{m;} - 
 								</c:for>
 							</td>
@@ -385,7 +385,7 @@
 								<td>{getGender(p;;)}</td>
 								<td>{getItem(p;;)}</td>
 								<td>
-									<c:for list="getMoves(p;;)" var="m">
+									<c:for list="getMoves(p;;)" var="m" className='java.lang.String'>
 										{m;} - 
 									</c:for>
 								</td>
@@ -441,7 +441,7 @@
 							<td>{getGenderFoe(p;;)}</td>
 							<td>{getItemFoe(p;;)}</td>
 							<td>
-								<c:for list="getMovesFoe(p;;)" var="m">
+								<c:for list="getMovesFoe(p;;)" var="m" className='java.lang.String'>
 									{m;} - 
 								</c:for>
 							</td>
@@ -472,7 +472,7 @@
 							<td>{getGenderAlly(p;;)}</td>
 							<td>{getItemAlly(p;;)}</td>
 							<td>
-								<c:for list="getMovesAlly(p;;)" var="m">
+								<c:for list="getMovesAlly(p;;)" var="m" className='java.lang.String'>
 									{m;} - 
 								</c:for>
 							</td>
@@ -507,7 +507,7 @@
 								<td>{getGender(p;;)}</td>
 								<td>{getItem(p;;)}</td>
 								<td>
-									<c:for list="getMoves(p;;)" var="m">
+									<c:for list="getMoves(p;;)" var="m" className='java.lang.String'>
 										{m;} - 
 									</c:for>
 								</td>
@@ -561,7 +561,7 @@
 							<td>{getGenderFoe(p;;)}</td>
 							<td>{getItemFoe(p;;)}</td>
 							<td>
-								<c:for list="getMovesFoe(p;;)" var="m">
+								<c:for list="getMovesFoe(p;;)" var="m" className='java.lang.String'>
 									{m;} - 
 								</c:for>
 							</td>
@@ -592,7 +592,7 @@
 							<td>{getGenderAlly(p;;)}</td>
 							<td>{getItemAlly(p;;)}</td>
 							<td>
-								<c:for list="getMovesAlly(p;;)" var="m">
+								<c:for list="getMovesAlly(p;;)" var="m" className='java.lang.String'>
 									{m;} - 
 								</c:for>
 							</td>
@@ -627,7 +627,7 @@
 								<td>{getGender(p;;)}</td>
 								<td>{getItem(p;;)}</td>
 								<td>
-									<c:for list="getMoves(p;;)" var="m">
+									<c:for list="getMoves(p;;)" var="m" className='java.lang.String'>
 										{m;} - 
 									</c:for>
 								</td>
@@ -668,7 +668,7 @@
 										<td>{d;displayName}</td>
 										<td>{d;pp}</td>
 										<td>
-											<c:for list="d;getTypes()" var="t">
+											<c:for list="d;getTypes()" var="t" className='java.lang.String'>
 												{t;} -
 											</c:for>
 										</td>
@@ -744,7 +744,7 @@
 							<td>{getGenderFoe(p;;)}</td>
 							<td>{getItemFoe(p;;)}</td>
 							<td>
-								<c:for list="getMovesFoe(p;;)" var="m">
+								<c:for list="getMovesFoe(p;;)" var="m" className='java.lang.String'>
 									{m;} - 
 								</c:for>
 							</td>
@@ -775,7 +775,7 @@
 							<td>{getGenderAlly(p;;)}</td>
 							<td>{getItemAlly(p;;)}</td>
 							<td>
-								<c:for list="getMovesAlly(p;;)" var="m">
+								<c:for list="getMovesAlly(p;;)" var="m" className='java.lang.String'>
 									{m;} - 
 								</c:for>
 							</td>
@@ -810,7 +810,7 @@
 								<td>{getGender(p;;)}</td>
 								<td>{getItem(p;;)}</td>
 								<td>
-									<c:for list="getMoves(p;;)" var="m">
+									<c:for list="getMoves(p;;)" var="m" className='java.lang.String'>
 										{m;} - 
 									</c:for>
 								</td>
@@ -848,7 +848,7 @@
 									<td>{d;displayName}</td>
 									<td>{d;pp}</td>
 									<td>
-										<c:for list="d;getTypes()" var="t">
+										<c:for list="d;getTypes()" var="t" className='java.lang.String'>
 											{t;} -
 										</c:for>
 									</td>
@@ -924,7 +924,7 @@
 							<td>{getGenderFoe(p;;)}</td>
 							<td>{getItemFoe(p;;)}</td>
 							<td>
-								<c:for list="getMovesFoe(p;;)" var="m">
+								<c:for list="getMovesFoe(p;;)" var="m" className='java.lang.String'>
 									{m;} - 
 								</c:for>
 							</td>
@@ -955,7 +955,7 @@
 							<td>{getGenderAlly(p;;)}</td>
 							<td>{getItemAlly(p;;)}</td>
 							<td>
-								<c:for list="getMovesAlly(p;;)" var="m">
+								<c:for list="getMovesAlly(p;;)" var="m" className='java.lang.String'>
 									{m;} - 
 								</c:for>
 							</td>
@@ -970,7 +970,7 @@
 				<c:if condition="!getKoPlayers().isEmpty()">
 					<c:message value="msg_simulation,ko_player_fighters"/>
 					<ul>
-						<c:for list="getKoPlayers()" var="p">
+						<c:for list="getKoPlayers()" var="p" className='java.lang.String'>
 							<li>{p;}</li>
 						</c:for>
 					</ul>
@@ -979,7 +979,7 @@
 				<c:if condition="!getNotKoFrontFoes().isEmpty()">
 					<c:message value="msg_simulation,not_ko_foe_fighters"/>
 					<ul>
-						<c:for list="getNotKoFrontFoes()" var="p">
+						<c:for list="getNotKoFrontFoes()" var="p" className='java.lang.String'>
 							<li>{p;}</li>
 						</c:for>
 					</ul>
@@ -988,7 +988,7 @@
 				<c:if condition="!getKoFoes().isEmpty()">
 					<c:message value="msg_simulation,ko_foe_fighters"/>
 					<ul>
-						<c:for list="getKoFoes()" var="p">
+						<c:for list="getKoFoes()" var="p" className='java.lang.String'>
 							<li>{p;}</li>
 						</c:for>
 					</ul>
@@ -1029,7 +1029,7 @@
 					<c:message value="msg_simulation,issue_after_fight"/>
 					<br/>
 				</c:if>
-				<c:for list="comments" var="l">
+				<c:for list="comments" var="l" className='java.lang.String'>
 					{l;}<br/>
 				</c:for>
 			</c:if>
@@ -1063,7 +1063,7 @@
 								<td>{getGenderAfterFight(p;;)}</td>
 								<td>{getItemAfterFight(p;;)}</td>
 								<td>
-									<c:for list="getMovesAfterFight(p;;)" var="m">
+									<c:for list="getMovesAfterFight(p;;)" var="m" className='java.lang.String'>
 										{m;} - 
 									</c:for>
 								</td>
@@ -1095,7 +1095,7 @@
 				<form action="" c:command="$hideComments" method="post" name="hidecomment">
 					<c:submit message="msg_simulation,hide_comments"/>
 				</form>
-				<c:for list="comments" var="l">
+				<c:for list="comments" var="l" className='java.lang.String'>
 					{l;}<br/>
 				</c:for>
 			</c:if>
@@ -1130,7 +1130,7 @@
 								<td>{getGenderAfterFight(p;;)}</td>
 								<td>{getItemAfterFight(p;;)}</td>
 								<td>
-									<c:for list="getMovesAfterFight(p;;)" var="m">
+									<c:for list="getMovesAfterFight(p;;)" var="m" className='java.lang.String'>
 										{m;} - 
 									</c:for>
 								</td>
@@ -1180,7 +1180,7 @@
 									<td>{d;displayName}</td>
 									<td>{d;pp}</td>
 									<td>
-										<c:for list="d;getTypes()" var="t">
+										<c:for list="d;getTypes()" var="t" className='java.lang.String'>
 											{t;} -
 										</c:for>
 									</td>
