--- a/pokemonbean/resources_pk/rom/web/html/simulation/simulationlevel.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/simulationlevel.html
@@ -45,7 +45,7 @@
 		<br/>
 		<a c:command="$cancel" href=""><c:message value="msg_levelsimu,cancel"/></a>
 		<div style="font-size: 0;">
-			<c:for key="p" map="tiles" value="b">
+			<c:for key="p" map="tiles" value="b" varClassName='java.lang.String'>
 				<c:if condition="isFirstRow(p;;)">
 					<br/>
 				</c:if>
