--- a/pokemonbean/resources_pk/rom/web_pk/html/pokemon.html
+++ b/pokemonbean/resources_pk/rom/web_pk/html/pokemon.html
@@ -12,7 +12,7 @@
 		<c:if condition="!evolutions.isEmpty()">
 			<c:message value="msg_pokemon,evolutions"/>
 			<ul>
-				<c:for key="p" map="evolutions" value="e">
+				<c:for key="p" map="evolutions" value="e" varClassName='java.lang.String'>
 					<li>
 						{getEvo(p;;)}
 						<c:img src="{e;}"/>
@@ -64,14 +64,14 @@
 		</c:message>
 		<c:message value="msg_pokemon,types"/>
 		<ul>
-			<c:for list="types" var="t">
+			<c:for list="types" var="t" className='java.lang.String'>
 				<li>{t;}</li>
 			</c:for>
 		</ul>
 		<c:if condition="!status.isEmpty()">
 			<c:message value="msg_pokemon,status"/>
 			<ul>
-				<c:for list="status" var="t">
+				<c:for list="status" var="t" className='java.lang.String'>
 					<li>{t;}</li>
 				</c:for>
 			</ul>
@@ -86,7 +86,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="m" map="moves" value="a" varClassName="aiki.game.UsesOfMove">
+				<c:for key="m" map="moves" value="a" keyClassName='java.lang.String' varClassName="aiki.game.UsesOfMove">
 					<tr>
 						<td>{m;}</td>
 						<td>{a;getCurrent()}</td>
