--- a/pokemonbean/resources_pk/rom/web_prog/html/gameprog.html
+++ b/pokemonbean/resources_pk/rom/web_prog/html/gameprog.html
@@ -49,7 +49,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="p" map="remainingOtherTrainerPlaces" value="n">
+				<c:for key="p" map="remainingOtherTrainerPlaces" value="n" varClassName='java.lang.Integer'>
 					<tr>
 						<td>{getRemainingOtherTrainersPlaceName(p;;)}</td>
 						<td>{n;}</td>
@@ -60,14 +60,14 @@
 		<br/>
 		<c:message value="msg_prog,unVisitPlace"/>
 		<ul>
-			<c:for list="unVisitedPlaces" var="p">
+			<c:for list="unVisitedPlaces" var="p" className='java.lang.String'>
 				<li>{p;}</li>
 			</c:for>
 		</ul>
 		<br/>
 		<c:message value="msg_prog,visitPlace"/>
 		<ul>
-			<c:for list="visitedPlaces" var="p">
+			<c:for list="visitedPlaces" var="p" className='java.lang.String'>
 				<li>{p;}</li>
 			</c:for>
 		</ul>
