--- a/tarotbean/resources_cards/classes/fr/cards/tarot/results.html
+++ b/tarotbean/resources_cards/classes/fr/cards/tarot/results.html
@@ -22,7 +22,7 @@
 					Aucun
 				</c:if> <c:if condition="!calledPlayers.isEmpty()">
 					<ul>
-						<c:for var="p" list="calledPlayers">
+						<c:for var="p" list="calledPlayers" className='java.lang.String'>
 							<li>{p;}</li>
 						</c:for>
 					</ul>
@@ -34,7 +34,7 @@
 					Aucune
 				</c:if> <c:if condition="!calledCardsList.isEmpty()">
 					<ul>
-						<c:for var="c" list="calledCardsList">
+						<c:for var="c" list="calledCardsList" className='java.lang.String'>
 							<li>{c;}</li>
 						</c:for>
 					</ul>
@@ -112,7 +112,7 @@
 		<thead>
 			<tr>
 				<td></td>
-				<c:for var="p" list="nicknames">
+				<c:for var="p" list="nicknames" className='java.lang.String'>
 					<td>{p;}</td>
 				</c:for>
 			</tr>
@@ -121,7 +121,7 @@
 			<c:for var="l" list="linesDeal" className='cards.tarot.beans.LineDeal'>
 				<tr>
 					<td>{l;number}</td>
-					<c:for var="s" list="l;scores">
+					<c:for var="s" list="l;scores" className='java.lang.Long'>
 						<td>{s;}</td>
 					</c:for>
 				</tr>
